--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@
 }
 
 /*========== base styles ==========*/
-
+.roomList__header
 * {
   font-family: "DM Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
@@ -177,6 +177,8 @@ a {
   border-radius: 50%;
 }
 
+
+
 .avatar.avatar--medium:after {
   width: 0.7rem;
   height: 0.7rem;
@@ -274,6 +276,8 @@ a {
   display: flex;
   gap: 9.5rem;
 }
+
+.layout__box
 
 .header__logo,
 .header__user {
@@ -1166,3 +1170,5 @@ a {
   color: var(--color-main);
   font-weight: 1.4rem;
 }
+
+
